dost velky prepis ukladani komentaru a diskusi vubec
git-svn-id: https://zdrojaky.abclinuxu.cz/svn-abclinuxu/trunk@1480 be82d567-0701-4079-a524-1ea639e27e29